Added the description of the course; several other small changes.

--- a/syllabus/cs500501-syllabus.tex
+++ b/syllabus/cs500501-syllabus.tex
@@ -39,14 +39,13 @@ Final Examination: Friday, December 13, 2013 at 9:00 am
 \subsection*{Course Catalogue Description}
 
 \begin{quote}
-
-	A study of the principles and concepts used in the specification, design, implementation, testing, and maintenance
-	of large software systems. Topics include requirements elicitation and analysis, formal specification, software
-	architectures, object-oriented design, software measurement, software testing and analysis, and evolution of a
-	program.  Students practice the principles of software development by participating as group members in the creation
-	of a significant software application. One laboratory per week. Prerequisites: Computer Science 210 and 220 or
-	permission of the instructor. \\ {\em Offered in alternate years}.
-
+A corequisite seminar for all students participating in the Internship Program.  Internship students enroll twice, once
+prior to and once following the Internship. Computer Science 500 focuses on expectations and planning, leading to the
+Internship Proposal required for all students planning an internship.  Computer Science 501 provides the opportunity for
+students who have completed the Internship to prepare written and oral reports on the Internship experience. The
+student, in consultation with the faculty of the Department of Computer Science, is responsible for arranging for an
+acceptable internship.  The courses meet together weekly for one-half a semester. Credit: One semester hour for each
+course. Prerequisites: Completion of at least two core courses.
 \end{quote}
 
 \subsection*{Course Objectives}
