Added more information about the course objectives for both classes.

--- a/syllabus/cs500501-syllabus.tex
+++ b/syllabus/cs500501-syllabus.tex
@@ -32,9 +32,9 @@ then reserving an open time slot.
 
 \subsection*{Course Meeting Schedule}
 
-Lecture, Discussion, Presentations, and Group Work: Tuesday and Thursday, 11:00 am -- 12:15 pm \\
-Laboratory Session: Wednesday, 2:30 pm -- 4:20 pm \\
-Final Examination: Friday, December 13, 2013 at 9:00 am
+Neither CMPSC 500 nor 501 have a set meeting time.  Instead, students are required to meet with the course instructor
+during office hours for a total of 60 minutes.  These meetings must be scheduled through the instructor's reservation
+system and documented on a meeting record that you submit on the last day of classes.
 
 \subsection*{Course Catalogue Description}
 
@@ -49,6 +49,17 @@ course. Prerequisites: Completion of at least two core courses.
 \end{quote}
 
 \subsection*{Course Objectives}
+
+The students in CMPSC 500 will develop a list of internship and career resources, explore their internship and career
+interests, and write a proposal for the internship that they will undertake. The course aims to help students
+learn more about the field of computing and the positions that are available to computer scientists who graduate from
+Allegheny College.  Overall, the course will provide a framework that enables a student to secure an interesting and
+meaningful internship.
+
+\noindent
+The students in CMPSC 501 will develop a list of career resources, explore their career interests, write a final report
+describing their internship, and give a public presentation about their internship.  This course gives
+students who recently completed an internship a forum for sharing their experiences with the Allegheny College community.
 
 \subsection*{Performance Objectives}
 
