Finished a first draft of the content up to the required text books.

--- a/syllabus/cs500501-syllabus.tex
+++ b/syllabus/cs500501-syllabus.tex
@@ -63,10 +63,17 @@ students who recently completed an internship a forum for sharing their experien
 
 \subsection*{Performance Objectives}
 
+At the completion of either CMPSC 500 or 501, a student should be familiar with resources related to various facets of
+internships and careers. Students should have skills that enable them to effectively investigate internships and
+careers.  Also, the student should have a better understanding of the computer science sub-disciplines that they may
+want to pursue after graduation from Allegheny College. Finally, students should also have improved their writing and
+speaking skills.
+
 \subsection*{Required Textbooks}
 
 \noindent
-Students who want to improve their technical writing skills may consult the following books.
+There are no required textbooks for this class.  However, students who want to improve their technical writing skills
+may consult the following books.
 
 \noindent{\em BUGS in Writing: A Guide to Debugging Your Prose}. Lyn Dupr\'e. Second Edition,  ISBN-10: 020137921X,
 ISBN-13: 978-0201379211, 704 pages, 1998.
