Added the first draft of content about the grade percentages. Split for classes.

--- a/syllabus/cs500501-syllabus.tex
+++ b/syllabus/cs500501-syllabus.tex
@@ -83,21 +83,56 @@ ISBN-13: 978-0201379211, 704 pages, 1998.
 
 \subsection*{Grading Policy}
 
-The grade that a student receives in this class will be based on the
-following categories. All percentages are approximate and it is possible
-for the assigned percentages to change during the academic semester if a
-need to do so presents itself. 
+% Final Resume
+% Two Page Career Interest Statement
+% Two Page Description of Career Resources
+% Secured Internship
+% Two Page Internship Proposal
+% 
+% Students will be expected to "workshop" their resume with the Instructor and the staff in the Office of Career Services
+% (OCS). Members of the Office of Career Services will be able to provide the student will invaluable advice concerning
+% resumes, internship opportunities, and careers. A student's career interest statement must describe the types of careers
+% in which a student is interested. However, this document should go beyond the basic statement of a job description and
+% also include information about preferred geographical location, technologies that the student is interested in using,
+% types of software the student would like to develop, etc. Each student will be responsible for the creation of a
+% document that describes the career and internship resources that they found to be the most valuable. For example, a
+% student might create a listing of different Web sites and books that they found useful. However, this listing should
+% also include a description of the strengths and weaknesses of these resources. Finally, each student must secure an
+% internship and write a short proposal (in conjunction with the staff members at their chosen company) to describe the
+% work that they will conduct.
+% 
 
+The grade that a student receives in this class will be based on the following categories. All percentages are
+approximate and it is possible for the assigned percentages to change during the academic semester if a need to do so
+presents itself. 
+
+Grade percentages for students in CMPSC 500:
+
+\vspace{-.1in}
 \begin{center}
 \begin{tabular}{ll}
-Class Participation and Instructor Meetings & 5\% \\
-First Examination & 15\% \\
-Second Examination & 15\% \\
-Final Examination & 20\% \\
-Laboratory and Homework Assignments & 30\% \\
-Final Project & 15\%
+Class Participation and Instructor Meetings & 20\% \\
+Career Interest Statement & 20\% \\
+Description of Career Resources & 20\% \\
+Internship Proposal & 30\% \\
+Secured Internship & 10\% \\
 \end{tabular}
 \end{center}
+
+Grade percentages for students in CMPSC 501:
+
+\vspace{-.1in}
+\begin{center}
+\begin{tabular}{ll}
+Class Participation and Instructor Meetings & 20\% \\
+Internship Retrospective & 25\% \\
+Description of Career Resources & 25\% \\
+Internship Presentation & 30\% \\
+\end{tabular}
+\end{center}
+
+
+
 
 Each of the above grading categories has the following definition:
 
