Added details about the description of career resources.

--- a/syllabus/cs500501-syllabus.tex
+++ b/syllabus/cs500501-syllabus.tex
@@ -33,8 +33,9 @@ then reserving an open time slot.
 \subsection*{Course Meeting Schedule}
 
 Neither CMPSC 500 nor 501 have a set meeting time.  Instead, students are required to meet with the course instructor
-during office hours for a total of 60 minutes.  These meetings must be scheduled through the instructor's reservation
-system and documented on a meeting record that you submit on the last day of classes.
+during office hours for a total of 60 minutes.  These meetings must be scheduled through the course instructor's reservation
+system and documented on a meeting record that you submit on the last day of classes (see the ``Grading Policy''
+section for more details).
 
 \subsection*{Course Catalogue Description}
 
@@ -57,7 +58,7 @@ Allegheny College.  Overall, the course will provide a framework that enables a 
 meaningful internship.
 
 \noindent
-The students in CMPSC 501 will develop a list of career resources, explore their career interests, write a final report
+The students in CMPSC 501 will create a list of career resources, explore their career interests, write a final report
 describing their internship, and give a public presentation about their internship.  This course gives
 students who recently completed an internship a forum for sharing their experiences with the Allegheny College community.
 
@@ -131,22 +132,29 @@ Internship Presentation & 30\% \\
 \end{tabular}
 \end{center}
 
-
-
-
-Each of the above grading categories has the following definition:
+Each of these grading categories has the following definition:
 
 \begin{itemize}
 
-	\item {\em Class Participation and Instructor Meetings}: All students are required to actively participate during
-		all of the class sessions. Your participation will take forms such as answering questions about the required
-		reading assignments, asking constructive questions of your group members, giving presentations, and leading a
-		discussion session. Furthermore, all students are required to meet with the course instructor during office
-		hours for a total of sixty minutes during the Fall 2013 semester.  These meetings must be scheduled through the
-		instructor's reservation system and documented on a meeting record that you submit on the day of the final
-		examination. A student will receive an interim and final grade for this category.
+	\item {\em Class Participation and Instructor Meetings}: All students are required to attend the public
+		presentations given as part of the internship seminar.  Furthermore, all students must meet with the
+		course instructor during office hours for a total of sixty minutes during the Fall 2013 semester.  These
+		meetings must be scheduled through the instructor's reservation system and documented on a meeting record that
+		you submit on the day of the final examination. Attendance at the seminar's presentations corresponds to 5\% of
+		the student's grade in this category and the instructor meetings comprise the other 15\%. If $t=60$, then a
+		student who attends $m$ minutes of meetings will receive a grade of $\frac{\max{(t,60)}}{t}$ for the 15\%
+		of this grade.
+		
+	\item {\em Career Interest Statement}: This document must describe the types of careers in which a student has
+		interest. This statement should go beyond furnishing a job title and description and also give
+		information concerning issues such as preferred geographical location, technologies that the student wants to
+		use, and types of software the student would like to develop. 	
 
-	
+	\item {\em Description of Career Resources}:  Students must create a document that describes the career and
+		internship resources that they found to be the most valuable during their participation in the internship
+		seminar. For instance, students might create a listing of different Web sites and books that they found useful. 
+		Beyond simply listing the resources, this document should highlight their strengths, weaknesses, and interconnections. 		
+
 \end{itemize}
 
 \subsection*{Class Policies}
