Finished a first draft of all of the details about course grades.

--- a/syllabus/cs500501-syllabus.tex
+++ b/syllabus/cs500501-syllabus.tex
@@ -148,12 +148,37 @@ Each of these grading categories has the following definition:
 	\item {\em Career Interest Statement}: This document must describe the types of careers in which a student has
 		interest. This statement should go beyond furnishing a job title and description and also give
 		information concerning issues such as preferred geographical location, technologies that the student wants to
-		use, and types of software the student would like to develop. 	
+		use, and types of software that the student would like to develop. 	
 
 	\item {\em Description of Career Resources}:  Students must create a document that describes the career and
 		internship resources that they found to be the most valuable during their participation in the internship
 		seminar. For instance, students might create a listing of different Web sites and books that they found useful. 
 		Beyond simply listing the resources, this document should highlight their strengths, weaknesses, and interconnections. 		
+
+	\item {\em Internship Proposal}: Students must write a short proposal, in conjunction with the staff members of the
+		company that will host their internship, to describe the work that they will conduct during the internship.
+		This document should furnish as must detail as is possible.  For instance, the proposal should state who will be
+		the student's mentor, how the student will integrate into existing team(s) within the company, and the
+		student's assigned project(s). 
+
+	\item {\em Secured Internship}: Each student should work hard to secure an internship by the end of the seminar.  If
+		students anticipate that they will not be able to secure an internship, they should discuss this matter with the
+		course instructor well in advance of the end of the semester.  In some situations, the course instructor may be 
+		able to make alternative arrangements for a student who has not yet been able to secure an internship.
+
+	\item {\em Internship Presentation}: After completing their internship, students should give a public presentation
+		hosted by the Department of Computer Science. In consultation with the course instructor and the president of
+		Allegheny College's student chapter of the ACM, students must schedule a seminar in which they will
+		present.  Well in advance of their presentation, students must deliver to the course instructor a copy of their 
+		presentation slides.  Students should speak for at least ten minutes and be prepared to answer questions for
+		several minutes.     
+
+	\item {\em Internship Retrospective}: Students who have completed their internship should write a short document
+		describing the work that they completed.  This document should also reflect on whether the student would suggest
+		that other Allegheny College students should also intern at the company that offered the internship;  if the
+		company is suitable then this document should furnish contact information for people at the company.  In
+		contrast to the internship presentation, this document offers students an opportunity to privately reflect on
+		their experiences in a way that might not be appropriate in a public forum.
 
 \end{itemize}
 
