--- a/syllabus/cs500501-syllabus.tex
+++ b/syllabus/cs500501-syllabus.tex
@@ -59,21 +59,22 @@ meaningful internship.
 
 \noindent
 The students in CMPSC 501 will create a list of career resources, explore their career interests, write a final report
-describing their internship, and give a public presentation about their internship.  This course gives
-students who recently completed an internship a forum for sharing their experiences with the Allegheny College community.
+reflecting on their internship, and give a public presentation about their internship.  This course gives
+students who recently completed an internship a forum for sharing their experiences with both computer science faculty
+and students and the college community as a whole.
 
 \subsection*{Performance Objectives}
 
-At the completion of either CMPSC 500 or 501, a student should be familiar with resources related to various facets of
+At the completion of either CMPSC 500 or CMPSC 501, a student should be familiar with resources related to various facets of
 internships and careers. Students should have skills that enable them to effectively investigate internships and
 careers.  Also, the student should have a better understanding of the computer science sub-disciplines that they may
-want to pursue after graduation from Allegheny College. Finally, students should also have improved their writing and
+want to pursue after graduating from Allegheny College. Finally, students should also have improved their writing and
 speaking skills.
 
 \subsection*{Required Textbooks}
 
 \noindent
-There are no required textbooks for this class.  However, students who want to improve their technical writing skills
+There are no required textbooks for this class.  However, students who want to improve their general and technical writing skills
 may consult the following books.
 
 \noindent{\em BUGS in Writing: A Guide to Debugging Your Prose}. Lyn Dupr\'e. Second Edition,  ISBN-10: 020137921X,
@@ -150,7 +151,7 @@ Each of these grading categories has the following definition:
 		information concerning issues such as preferred geographical location, technologies that the student wants to
 		use, and types of software that the student would like to develop. 	
 
-	\item {\em Description of Career Resources}:  Students must create a document that describes the career and
+	\item {\em Description of Career Resources}:  Students must prepare a document that describes the career and
 		internship resources that they found to be the most valuable during their participation in the internship
 		seminar. For instance, students might create a listing of different Web sites and books that they found useful. 
 		Beyond simply listing the resources, this document should highlight their strengths, weaknesses, and interconnections. 		
@@ -175,7 +176,7 @@ Each of these grading categories has the following definition:
 
 	\item {\em Internship Retrospective}: Students who have completed their internship should write a short document
 		describing the work that they completed.  This document should also reflect on whether the student would suggest
-		that other Allegheny College students should also intern at the company that offered the internship;  if the
+		that other Allegheny College students should also intern at the company that offered their internship;  if the
 		company is suitable then this document should furnish contact information for people at the company.  In
 		contrast to the internship presentation, this document offers students an opportunity to privately reflect on
 		their experiences in a way that might not be appropriate in a public forum.
