Added a noindent above the sentence that describes the grading categories.

--- a/syllabus/cs500501-syllabus.tex
+++ b/syllabus/cs500501-syllabus.tex
@@ -133,6 +133,7 @@ Internship Presentation & 30\% \\
 \end{tabular}
 \end{center}
 
+\noindent
 Each of these grading categories has the following definition:
 
 \begin{itemize}
