Rearranged the sections, fixed content, added new content. Better. More.

--- a/syllabus/cs500501-syllabus.tex
+++ b/syllabus/cs500501-syllabus.tex
@@ -83,7 +83,9 @@ ISBN-13: 978-0201379211, 704 pages, 1998.
 \noindent{\em Writing for Computer Science}.  Justin Zobel. Second Edition,  ISBN-10: 1852338024, ISBN-13:
 978-1852338022, 270 pages, 2004.
 
-\subsection*{Grading Policy}
+\subsection*{Class Policies}
+
+\subsubsection*{Grading}
 
 % Final Resume
 % Two Page Career Interest Statement
@@ -106,11 +108,9 @@ ISBN-13: 978-0201379211, 704 pages, 1998.
 
 The grade that a student receives in this class will be based on the following categories. All percentages are
 approximate and it is possible for the assigned percentages to change during the academic semester if a need to do so
-presents itself. 
+presents itself. \\
 
-Grade percentages for students in CMPSC 500:
-
-\vspace{-.1in}
+Grade percentages for CMPSC 500:
 \begin{center}
 \begin{tabular}{ll}
 Class Participation and Instructor Meetings & 20\% \\
@@ -121,7 +121,8 @@ Secured Internship & 10\% \\
 \end{tabular}
 \end{center}
 
-Grade percentages for students in CMPSC 501:
+\newpage
+Grade percentages for CMPSC 501:
 
 \vspace{-.1in}
 \begin{center}
@@ -134,7 +135,7 @@ Internship Presentation & 30\% \\
 \end{center}
 
 \noindent
-Each of these grading categories has the following definition:
+The aforementioned grading categories has the following definition:
 
 \begin{itemize}
 
@@ -142,7 +143,7 @@ Each of these grading categories has the following definition:
 		presentations given as part of the internship seminar.  Furthermore, all students must meet with the
 		course instructor during office hours for a total of sixty minutes during the Fall 2013 semester.  These
 		meetings must be scheduled through the instructor's reservation system and documented on a meeting record that
-		you submit on the day of the final examination. Attendance at the seminar's presentations corresponds to 5\% of
+		you submit on the last day of classes. Attendance at the seminar's presentations corresponds to 5\% of
 		the student's grade in this category and the instructor meetings comprise the other 15\%. If $t=60$, then a
 		student who attends $m$ minutes of meetings will receive a grade of $\frac{\max{(t,60)}}{t}$ for the 15\%
 		of this grade.
@@ -159,7 +160,7 @@ Each of these grading categories has the following definition:
 
 	\item {\em Internship Proposal}: Students must write a short proposal, in conjunction with the staff members of the
 		company that will host their internship, to describe the work that they will conduct during the internship.
-		This document should furnish as must detail as is possible.  For instance, the proposal should state who will be
+		This document should furnish as much detail as is possible.  For instance, the proposal should state who will be
 		the student's mentor, how the student will integrate into existing team(s) within the company, and the
 		student's assigned project(s). 
 
@@ -183,8 +184,6 @@ Each of these grading categories has the following definition:
 		their experiences in a way that might not be appropriate in a public forum.
 
 \end{itemize}
-
-\subsection*{Class Policies}
 
 \subsubsection*{Disability Services}
 
