--- a/syllabus/cs500501-syllabus.tex
+++ b/syllabus/cs500501-syllabus.tex
@@ -185,6 +185,22 @@ The aforementioned grading categories has the following definition:
 
 \end{itemize}
 
+\subsubsection*{Email}
+
+Using your Allegheny College email address, I will sometimes send out class announcements with 
+assignment clarifications or presentations announcements. It is your responsibility to check your email at least once a day
+and to ensure that you can reliably send and receive emails. This class policy is based on the following statement in
+{\em The Compass}, the college's student handbook.
+
+\vspace*{-.1in}
+\begin{quote}
+``The use of email is a primary method of communication on campus. \ldots
+All students are provided with a campus email account and address while
+enrolled at Allegheny and are expected to check the account on a regular
+basis.'' 
+\end{quote}
+\vspace*{-.15in}
+
 \subsubsection*{Disability Services}
 
 The Americans with Disabilities Act (ADA) is a federal anti-discrimination statute that provides comprehensive civil
@@ -206,5 +222,13 @@ Program.  Each student who has matriculated at the College has acknowledged the 
 I hereby recognize and pledge to fulfill my responsibilities, as defined in the Honor Code, and to maintain the
 integrity of both myself and the College community as a whole.  
 \end{quote}
+
+\subsection*{Welcome to an Internship Adventure}
+
+A recent article in the {\em Seattle Times} opined that ``computer science is where the future jobs are''.  In this
+seminar, you will have the opportunity to search for and share about internship opportunities.  Since computer software
+and hardware are pervasive and influential aspects of our society, an internship in computer science effectively
+prepares you for a job after graduation.  As we start this class, I invite you to pursue with enthusiasm and
+vigor this adventure in internships.
 
 \end{document}
