A few minor changes to the syllabus. Now, this may be the near final version.

--- a/syllabus/cs500501-syllabus.tex
+++ b/syllabus/cs500501-syllabus.tex
@@ -107,8 +107,8 @@ ISBN-13: 978-0201379211, 704 pages, 1998.
 % 
 
 The grade that a student receives in this class will be based on the following categories. All percentages are
-approximate and it is possible for the assigned percentages to change during the academic semester if a need to do so
-presents itself. \\
+approximate and, if the need to do so presents itself, it is possible for the assigned percentages to change during the
+academic semester. \\
 
 Grade percentages for CMPSC 500:
 \begin{center}
@@ -135,7 +135,7 @@ Internship Presentation & 30\% \\
 \end{center}
 
 \noindent
-The aforementioned grading categories has the following definition:
+The aforementioned grading categories have the following definitions:
 
 \begin{itemize}
 
@@ -180,17 +180,17 @@ The aforementioned grading categories has the following definition:
 		describing the work that they completed.  This document should also reflect on whether the student would suggest
 		that other Allegheny College students should also intern at the company that offered their internship;  if the
 		company is suitable then this document should furnish contact information for people at the company.  In
-		contrast to the internship presentation, this document offers students an opportunity to privately reflect on
+		contrast to the internship presentation, this document affords students an opportunity to privately reflect on
 		their experiences in a way that might not be appropriate in a public forum.
 
 \end{itemize}
 
 \subsubsection*{Email}
 
-Using your Allegheny College email address, I will sometimes send out class announcements with 
-assignment clarifications or presentations announcements. It is your responsibility to check your email at least once a day
-and to ensure that you can reliably send and receive emails. This class policy is based on the following statement in
-{\em The Compass}, the college's student handbook.
+Using your Allegheny College email address, I will sometimes send out class announcements with assignment clarifications
+or presentations announcements. It is your responsibility to check your email at least once a day and to ensure that you
+can reliably send and receive emails. This class policy is based on the following statement in {\em The Compass}, the
+college's student handbook.
 
 \vspace*{-.1in}
 \begin{quote}
