Made a small change to the equation for class participation. Clearer?

--- a/syllabus/cs500501-syllabus.tex
+++ b/syllabus/cs500501-syllabus.tex
@@ -140,13 +140,12 @@ The aforementioned grading categories have the following definitions:
 \begin{itemize}
 
 	\item {\em Class Participation and Instructor Meetings}: All students are required to attend the public
-		presentations given as part of the internship seminar.  Furthermore, all students must meet with the
-		course instructor during office hours for a total of sixty minutes during the Fall 2013 semester.  These
-		meetings must be scheduled through the instructor's reservation system and documented on a meeting record that
-		you submit on the last day of classes. Attendance at the seminar's presentations corresponds to 5\% of
-		the student's grade in this category and the instructor meetings comprise the other 15\%. If $t=60$, then a
-		student who attends $m$ minutes of meetings will receive a grade of $\frac{\max{(t,60)}}{t}$ for the 15\%
-		of this grade.
+		presentations given as part of the internship seminar.  Furthermore, all students must meet with the course
+		instructor during office hours for a total of sixty minutes during the Fall 2013 semester.  These meetings must
+		be scheduled through the instructor's reservation system and documented on a meeting record that you submit on
+		the last day of classes. Attendance at the seminar's presentations corresponds to 5\% of the student's grade in
+		this category and the instructor meetings comprise the other 15\%. If $t=60$, then a student who attends $m$
+		minutes of meetings will receive a grade of $\frac{\max{(t,60)}}{t} \times 100$ for the 15\% of this grade.
 		
 	\item {\em Career Interest Statement}: This document must describe the types of careers in which a student has
 		interest. This statement should go beyond furnishing a job title and description and also give
