--- a/syllabus/cs500501-syllabus.tex
+++ b/syllabus/cs500501-syllabus.tex
@@ -145,7 +145,7 @@ The aforementioned grading categories have the following definitions:
 		meetings must be scheduled through the instructor's reservation system and documented on a meeting record that
 		you submit on the last day of classes. Attendance at the seminar's presentations corresponds to 5\% of
 		the student's grade in this category and the instructor meetings comprise the other 15\%. If $t=60$, then a
-		student who attends $m$ minutes of meetings will receive a grade of $\frac{\max{(t,60)}}{t}$ for the 15\%
+		student who attends $m$ minutes of meetings will receive a grade of $\frac{\max{(t,60)}}{t}\times100$ for the 15\%
 		of this grade.
 		
 	\item {\em Career Interest Statement}: This document must describe the types of careers in which a student has
